[gd_scene load_steps=5 format=3 uid="uid://q1odj77x3ge4"]

[ext_resource type="Texture2D" uid="uid://bqywu0sdvqqsr" path="res://whitecircle-removebg-preview.png" id="1_odsx0"]
[ext_resource type="Script" path="res://scripts/brain.gd" id="1_uo0wg"]

[sub_resource type="CircleShape2D" id="CircleShape2D_suekm"]
radius = 182.003

[sub_resource type="CircleShape2D" id="CircleShape2D_k02b5"]
radius = 173.104

[node name="Brain" type="Node2D"]
script = ExtResource("1_uo0wg")

[node name="Hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource("CircleShape2D_suekm")

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
shape = SubResource("CircleShape2D_k02b5")

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 10.0

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(0.999998, 0.371668, 0.716882, 1)
scale = Vector2(1.47009, 1.47009)
texture = ExtResource("1_odsx0")

[node name="HealthLabel" type="Label" parent="."]
offset_left = -159.0
offset_top = -13.0
offset_right = 161.0
offset_bottom = 37.0
theme_override_font_sizes/font_size = 50
text = "100"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BrainLabel" type="Label" parent="."]
offset_left = -39.0
offset_top = -37.0
offset_right = 41.0
offset_bottom = 13.0
theme_override_font_sizes/font_size = 30
text = "Brain"
horizontal_alignment = 1

[node name="WBCSpawnMarker" type="Marker2D" parent="."]
position = Vector2(0, 200)

[connection signal="body_entered" from="Hitbox" to="." method="_on_hitbox_body_entered"]
[connection signal="timeout" from="SpawnTimer" to="." method="_on_spawn_timer_timeout"]
